# virtualvirtualboy

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
.github/workflows/: android-debug-build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_player.cpp  audio_player.h  libretro_vb_core.cpp  libretro_vb_core.h  log.h  native_app.cpp  renderer_gl.cpp  renderer_gl.h  stereo_depth_reconstructor.cpp  stereo_depth_reconstructor.h  vip_mapping_evaluator.cpp  vip_mapping_evaluator.h  world_mesh_builder.cpp  world_mesh_builder.h  xr_stereo_renderer.cpp  xr_stereo_renderer.h
app/src/main/java/com/keitark/virtualvirtualboy/: MainActivity.kt
app/src/main/java/com/keitark/vrboy/: MainActivity.kt
tools/: vb_disasm.py  vip_scan_report.py
